--- a/styles.css
+++ b/styles.css
@@ -56,11 +56,9 @@ h4 {
 }
 .footer {
     position: absolute;
-    margin-left: 30px;
+    margin: 30px;
+    margin-bottom: 10px;
     bottom: 0;
-    width: 100%;
-    height: 60px;
-    line-height: 60px;
 }
 footer p {
     color: white;
